feat: handle favorites
