# src/modules/favorites/favorites.dto.ts
@@ -1,0 +1,15 @@
+import { Expose } from 'class-transformer';
+import { ViewArtistDto } from '../artist';
+import { ViewAlbumDto } from '../album';
+import { ViewTrackDto } from '../track';
+
+export class ViewFavoritesDto {
+  @Expose()
+  artists: ViewArtistDto[];
+
+  @Expose()
+  albums: ViewAlbumDto[];
+
+  @Expose()
+  tracks: ViewTrackDto[];
+}
